[package]
name = "conda-hoster"
version = "0.1.0"
authors = ["Zhaosheng Pan <zhaosheng.pan@ximalaya.com>"]
edition = "2018"

[dependencies]
actix-files = "0.2"
actix-web = "2.*"
actix-rt = "1.*"
actix-multipart = "0.2"
env_logger = "0.7"
futures = "0.3"
toml = "0.4"
serde = "1.*"
serde_derive = "1.*"
dirs = "1.*"
crossbeam = "0.3"
