[package]
name = "conda-hoster"
version = "0.1.0"
authors = ["Zhaosheng Pan <zhaosheng.pan@ximalaya.com>"]
edition = "2018"

[dependencies]
socket2 = "=0.3.12"
actix-files = "0.2.2"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-multipart = "0.2.0"
env_logger = "0.7.1"
futures = "0.3.5"
toml = "0.5.6"
serde = "1.0.115"
serde_derive = "1.0.115"
dirs = "3.0.1"
lazy_static = "1.4.0"
askama = "0.10.3"
